--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.0",
+    "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
     "express": "^4.15.0",
     "morgan": "^1.8.1",
